# midi-to-key

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: config.toml  main.cpp  main.h
